--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ hostname = { version = "0.3.1" }
 futures = { version = "0.3.30" }
 futures-locks = { version = "0.7.1" }
 iced = { version = "0.12.1", features = ["image", "system", "highlighter", "tokio", "debug"] }
-iced_aw = { version = "0.8.0", features = ["tabs", "icons"] }
+iced_aw = { version = "0.8.0", features = ["split", "tabs", "icons"] }
 iced_native = { version = "0.10.3" }
 iced_wgpu = { version = "0.12.1" }
 lazy_static = { version = "1.4.0" }
